# cpp-libraries

./: CMakeLists.txt  LICENSE  README.md
MessageFragmentationLibrary/: CMakeLists.txt  README.md
MessageFragmentationLibrary/include/: message_fragmenter.h
MessageFragmentationLibrary/src/: message_fragmenter.cpp
MessageFragmentationLibrary/tests/: main.cpp
SQLBuilderLibrary/: CMakeLists.txt  README.md
SQLBuilderLibrary/include/: sql_builder.h
SQLBuilderLibrary/src/: sql_builder.cpp
SQLBuilderLibrary/tests/: main.cpp
TCPProxyServer/: CMakeLists.txt  README.md
TCPProxyServer/include/: tcp_proxy_server.h
TCPProxyServer/src/: tcp_proxy_server.cpp
TCPProxyServer/tests/: main.cpp
